--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
+
+
+
+
+<head>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Lato:400,700,900" rel="stylesheet">
+  <!-- <link rel="stylesheet" media="screen" href="https://c.staticblitz.com/assets/css/preview-5c402199.css">
+  <script src="https://c.staticblitz.com/assets/ext-b93074208de308fd20bfb.js" crossorigin="anonymous"></script>
+  <script src="https://c.staticblitz.com/d/webcontainer.3e00eb9f21511f88f1bf57f5f6810512f74d871c.js" crossorigin="anonymous"></script>
+  <script src="https://c.staticblitz.com/assets/preview-5ed832f5b414f80da8d0b.js" crossorigin="anonymous"></script> -->
+
+  <!-- <script>(function(){_preboot("https://l.staticblitz.com/b/v1/angular-chat-bot-1lothh/bc42a647615", {"p":"stackblitz","a":"AIzaSyBZSvuCzbUhuRrSps-HjM5bFClLPaFF9Vg","o":true,"u":"ale221","$":false})})()</script> -->
+<link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css"><link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css"><style type="text/css">/* Add application styles & imports to this file! */</style><style>.button[_ngcontent-c0] {
+  margin-right: 20px
+}
+.button-active[_ngcontent-c0] {
+  background-color: #9b4dca;
+  color: white;
+}
+.button-active[_ngcontent-c0]:hover, .button-active[_ngcontent-c0]:focus {
+  background-color: #9b4dca;
+  border-color: #9b4dca;
+  color: #fff;
+}
+.top-bar[_ngcontent-c0] {
+  margin: 25px 0;
+}</style><style>.message[_ngcontent-c1] {
+  margin: 0 15px 20px;
+  padding: 10px 20px;
+  position: relative;
+  font-size: 20px;
+}
+.message.to[_ngcontent-c1] {
+  background-color: #2095fe;
+  color: #fff;
+  margin-left: 100px;
+  text-align: right;
+}
+.message.from[_ngcontent-c1] {
+  background-color: #e5e4e9;
+  color: #363636;
+  margin-right: 100px;
+  border-radius: 10px 10px 10px 0px;
+}
+.message.to[_ngcontent-c1]    + .message.to[_ngcontent-c1], .message.from[_ngcontent-c1]    + .message.from[_ngcontent-c1] {
+  margin-top: -10px;
+}</style></head>
+
+
+
+
 <body>
   <app-root></app-root>
 </body>
